fix css error with box-grid height on mobile

--- a/style.css
+++ b/style.css
@@ -934,6 +934,7 @@ path.two {
   .box-grid {
     grid-template-columns: 20px auto 30px;
     min-height: 90vh;
+    height: auto;
   }
   .welcome {
     display: flex;
